# semantic-search-service

./: .env.example  .gitignore  CAPABILITY_MAPPING.md  CLAUDE.md  PRODUCTION_READINESS_AUDIT.md  README.md  TASK.md  config.yaml  config.yaml.example  docker-compose.yml  pyproject.toml  requirements.txt  semantic-search  semantic-search-docs  setup.sh
.githooks/: pre-commit
.github/workflows/: auto-docs.yml  ci.yml
docs/: API.md  API_REFERENCE.md  AUTO_DOCUMENTATION.md  CLI_SDK_PYTHON_HIERARCHY.md  DOC_SEARCH_INTERFACES.md  ELECTRONHUB_RATE_LIMITS.md  LLAMAINDEX_PATTERNS_LOCAL_DOCS.md  NATIVE_CONFIGURATION.md  SERVICE_ARCHITECTURE.md  USAGE_GUIDE.md
docs/anthropic/: hooks.md
docs/archive/: API_PY_AUDIT.md  CLAUDE_PARSER_VIOLATIONS.md  CODEBASE_AUDIT_SUMMARY.md  CODE_ISSUES_ANALYSIS.md  CONFIG_PY_AUDIT.md  CONVERSATION_MEMORY_AUDIT.md  CONVERSATION_MEMORY_STATUS.md  CRITICAL_SESSION_SUMMARY.md  DOC_SEARCH_PY_AUDIT.md  ENTERPRISE_ARCHITECTURE_AUDIT.md  IMPLEMENTATION_STATUS.md  LLAMAINDEX_PROPER_PATTERNS.md  MCP_SERVER_AUDIT.md  MIGRATION_SUCCESS.md  README_QUICK_SEARCH.md  REALITY_CHECK.md  RELIABILITY_CHECKLIST.md  SESSION_SUMMARY_AUG28.md  TASK_AUDIT_REFACTOR_COMPLETED.md  TASK_CLEANUP_COMPLETED.md  TASK_SUBQUESTION_ENGINE_COMPLETED.md  TEST_RESULTS.md  hook_comparison_report.md
scripts/: setup_auto_docs.sh
scripts/hooks/: benchmark_research.py  precompact_simple.py  research_hook.py  sessionstart_context.py  test_hook_simple.py  validate_edit_hook.py
scripts/old/: run_test.sh  search  setup.sh
src/: __init__.py
src/core/: __init__.py  auto_docs.py  business_extractor.py  component_registry.py  config.py  conversation_memory.py  diagram_generator.py  doc_intelligence.py  doc_refresh.py  doc_search.py  index_helper.py  interfaces.py  jsonl_indexer.py  knowledge_graph.py  prompts.py  prompts.yaml  redis_cache.py  semantic_search.py
src/core/components/analysis/: architecture_compliance.py  business.py  existence.py  suggestions.py  violations.py
src/core/components/conversation/: indexer.py  memory.py  parser.py  search.py  stats.py
src/core/components/documentation/: auto_generator.py  github_indexing.py  indexing.py  management.py  search.py  url_indexing.py  web_indexing.py  workflow_indexing.py
src/core/components/graph/: creation.py  visualization.py
src/core/components/routing/: simple.py
src/core/components/search/: basic.py  citation.py
src/core/components/semantic/: search.py
src/core/components/visualization/: mermaid.py  plantuml.py  sequence.py  structural.py
src/core/docs/: __init__.py  config.py  doc_generator.py  doc_reader.py  doc_refresh.py  language_detector.py
src/core/intelligence/: __init__.py  base.py  cache.py  graph_strategy.py  graph_viz.py  loader.py  manager.py  types.py  vector_strategy.py
src/core/resources/: __init__.py  cache_manager.py  config_manager.py  index_manager.py  intelligence_manager.py  llm_selector.py  prompt_manager.py  qdrant_manager.py
src/integrations/: __init__.py  api.py  auto_docs_setup.py  cli.py  dependencies.py  mcp_fastmcp.py  mcp_server.py
storage/: doc_metadata.json
storage/claude-parser/: index_store.json
storage/docs_llamaindex/: docstore.json  index_store.json
storage/llamaindex_complete/: index_store.json
storage/redis_test/: index_store.json
storage/semantic-search-service_conversations/: index_store.json
storage/test/: docstore.json  index_store.json
storage/test_fix/: index_store.json
tests/: test_auto_docs_setup.py  test_bypass_validation.py  test_debug_subquestion.py  test_direct_openai.py  test_electronhub.py
tests/fixtures/: auth.py  profile.py
